add: loading screen, winrate

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,6 +30,5 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb)))
-    rgb(var(--background-start-rgb));
+  background: linear-gradient(to bottom right, rgb(30, 27, 75), #020617);
 }
