--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,20 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 *::-webkit-scrollbar {
   width: 1rem;
 }
@@ -29,7 +15,7 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  color: rgb(235, 240, 255);
   background: linear-gradient(to bottom right, rgb(30, 27, 75), #020617);
   min-height: 100vh;
 }
